refactor: Update OrderController